forms-flow-web/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-web
  namespace: forms-flow-web
  labels:
    name: formsflowweb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: formsflowweb
  template:
    metadata:
      labels:
        name: formsflowweb
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-web
          image: sofiamunicipalitydigitall/forms-flow-web:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo '192.168.201.46  smkeycloak-dev forms-flow-web-dev form-flow-forms-dev form-flow-analytics-dev form-flow-api-dev form-flow-bpm-dev form-flow-documents-dev' >> /etc/hosts"]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
